--- a/.env.sample
+++ b/.env.sample
@@ -10,3 +10,5 @@ WASABI_SECRET_KEY=
 WASABI_PRIVATE_BUCKET=corev3devprivate
 WASABI_PUBLIC_BUCKET=corev3devpublic
 WASABI_PUBLIC_BUCKET=corev3devpublic
+
+TUNNEL_TOKEN=
