docker compose fileのenv読み込みを追加

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     networks:
       - digicoreapi
       - adminnet
+    env_file:
+      - .env
   cf-tunnel:
     image: cloudflare/cloudflared
     restart: unless-stopped
