--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@types/file-saver": "^2.0.5",
     "@types/node": "18.11.19",
     "@types/react": "18.0.27",
     "@types/react-bootstrap": "^0.32.32",
@@ -17,6 +18,7 @@
     "bootstrap": "^5.2.3",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "file-saver": "^2.0.5",
     "mysql2": "^3.1.0",
     "next": "13.1.6",
     "react": "18.2.0",
