--- a/package.json
+++ b/package.json
@@ -9,21 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "13.1.6",
-    "@types/file-saver": "^2.0.5",
-    "@types/node": "18.11.19",
-    "@types/react": "18.0.27",
-    "@types/react-bootstrap": "^0.32.32",
-    "@types/react-dom": "18.0.10",
-    "bootstrap": "^5.2.3",
-    "eslint": "8.33.0",
-    "eslint-config-next": "13.1.6",
+    "bootstrap": "^5.3.3",
     "file-saver": "^2.0.5",
-    "mysql2": "^3.1.0",
-    "next": "13.1.6",
-    "react": "18.2.0",
-    "react-bootstrap": "^2.7.2",
-    "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "mysql2": "^3.14.0",
+    "next": "15.2.4",
+    "react": "19.0.0",
+    "react-bootstrap": "^2.10.9",
+    "react-dom": "19.0.0",
+    "typescript": "5.8.2"
+  },
+  "devDependencies": {
+    "eslint": "9.23.0",
+    "eslint-config-next": "15.2.4",
+    "@types/file-saver": "^2.0.7",
+    "@types/node": "^22.13.14",
+    "@types/react": "^19.0.12",
+    "@types/react-bootstrap": "^0.32.37",
+    "@types/react-dom": "^19.0.4"
   }
 }
