--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "dayjs": "^1.11.13",
     "file-saver": "^2.0.5",
     "mysql2": "^3.14.0",
     "next": "15.2.4",
@@ -19,12 +20,12 @@
     "typescript": "5.8.2"
   },
   "devDependencies": {
-    "eslint": "9.23.0",
-    "eslint-config-next": "15.2.4",
     "@types/file-saver": "^2.0.7",
     "@types/node": "^22.13.14",
     "@types/react": "^19.0.12",
     "@types/react-bootstrap": "^0.32.37",
-    "@types/react-dom": "^19.0.4"
+    "@types/react-dom": "^19.0.4",
+    "eslint": "9.23.0",
+    "eslint-config-next": "15.2.4"
   }
 }
